--- a/Practical/Practical-10.css
+++ b/Practical/Practical-10.css
@@ -10,6 +10,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
 }
 #header img{
     width: 70px;
@@ -44,12 +45,37 @@
 }
 .side-bar ul li{
     margin-bottom: 10px;
+    margin-left: 10px;
+    border-bottom: 2px solid lightgreen;
 }
 .side-bar ul li a{
     color: white;
     text-decoration: none;
     font-size: 30px;
+    opacity: 0.7;
 }
+.side-bar ul li a:hover{
+    border-left: 5px solid white;
+    transition: 0.3s;
+    opacity: 1;
+}
+a i{
+    margin-right: 10px;
+}
+.show-btn,.hide-btn{
+    top: 20px;
+    color:white;
+    position: fixed;
+    font-size: 30px;
+    left: 30px;
+}
+.hide-btn{
+    opacity:0;
+}
+#chk:checked~.side-bar{
+    left: 0;
+}
+.chk:checked~
 .container{
     width: 100%;
 }
