--- a/Practical/Practical-10.css
+++ b/Practical/Practical-10.css
@@ -22,12 +22,15 @@
 }
 #banner{
     padding: 10px;
+    width: 100%;
+    float: right;
+    margin-top: 70px;
 }
 #banner img{
     width: 100%;
     max-width: 800px;
     margin: auto;
-    display: block;
+    display: flex;
     }
 #banner p{
     text-align: justify;
@@ -39,6 +42,7 @@
     height: 100%;
     top:70px;
     position: fixed;
+    left: -100%;
 }
 .side-bar ul{
     width: 100%;
@@ -69,13 +73,38 @@ a i{
     font-size: 30px;
     left: 30px;
 }
+input{
+    display: none;
+}
 .hide-btn{
-    opacity:0;
+    opacity: 0;
 }
 #chk:checked~.side-bar{
     left: 0;
 }
-.chk:checked~
+#chk:checked~.show-btn{
+    opacity: 0;
+}
+#chk:checked~.hide-btn{
+    opacity: 1;
+}
+#chk:checked~#banner{
+    width: 80%;
+}
 .container{
     width: 100%;
+    margin: auto;
+}
+.social{
+    width: 100%;
+    position: absolute;
+    bottom: 150px;
+    color:white;
+    font-size:40px;
+    display: flex;
+    padding: 10px;
+    justify-content: space-evenly;
+    align-items: center;
+    border-bottom: 2px solid;
+    border-top: 2px solid;
 }
