--- a/Practical/Practical-10.css
+++ b/Practical/Practical-10.css
@@ -50,26 +50,24 @@
     width: 100%;
 }
 .side-bar ul li{
-    margin-bottom: 10px;
-    margin-left: 5px;
     border-bottom: 2px solid whitesmoke;
     list-style: none;
-    padding: 5px 20px;
 }
 .side-bar ul li a{
+    display: block;
     color: white;
     text-decoration: none;
     font-size: 20px;
     opacity: 0.7;
+    padding: 15px 20px;
 }
 .side-bar ul li a:hover{
     border-left: 10px solid white;
     transition: 0.5s;
     opacity: 1;
-    padding-left: 5px;
 }
 a i{
-    margin-right: 10px;
+    margin-right: 15px;
 }
 .show-btn,.hide-btn{
     top: 20px;
@@ -123,4 +121,12 @@ i{
     color: white;
     font-size: 30px;
 }
-@media(max-)
+@media(max-width:700px){
+    .side-bar{
+        width: 100%;
+        text-align: center;
+    }
+    #header h1{
+        display: none;
+    }
+}
